[checks view] Status icon gets smaller if check name needs to wrap Fixes #4064

--- a/webviews/editorWebview/index.css
+++ b/webviews/editorWebview/index.css
@@ -1107,6 +1107,7 @@ code {
 	width: 16px;
 	height: 16px;
 	font-size: 16px;
+	display: flex;
 }
 
 .action-bar {
